upd for discussion

--- a/TA_1st_Project.ipynb
+++ b/TA_1st_Project.ipynb
@@ -2,31 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imports Completed\n"
+     ]
+    }
+   ],
    "source": [
-    "import nltk,os\n",
-    "from nltk import sent_tokenize"
+    "import re\n",
+    "import os\n",
+    "from nltk import sent_tokenize, word_tokenize\n",
+    "from IPython.display import clear_output\n",
+    "from collections import Counter\n",
+    "import gc\n",
+    "import pickle\n",
+    "\"\"\"\n",
+    "# Save objects\n",
+    "with open('corpus', 'wb') as f:\n",
+    "    pickle.dump(corpus, f)\n",
+    "    \n",
+    "with open('vocabulary', 'wb') as f:\n",
+    "    pickle.dump(vocabulary, f) \n",
+    "    \n",
+    "with open('WordCounts', 'wb') as f:\n",
+    "    pickle.dump(WordCounts, f) \n",
+    "\n",
+    "# Load objects\n",
+    "with open('corpus', 'rb') as f:\n",
+    "    corpus = pickle.load(f)\n",
+    "\n",
+    "with open('vocabulary', 'rb') as f:\n",
+    "    vocabulary = pickle.load(f)\n",
+    "    \n",
+    "with open('WordCounts', 'rb') as f:\n",
+    "    WordCounts = pickle.load(f)\n",
+    "\"\"\"\n",
+    "print(\"Imports Completed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
-    "def Clean_Text(text):\n",
-    "    \n",
+    "def clean_text(text):\n",
     "    \"\"\" \n",
     "    1. Remove html like text from europarl e.g. <Chapter 1> or line breaks\n",
     "    2. Remove line breaks\n",
     "    3. Reduce all whitespaces to 1\n",
     "    4. turn everything to lower case\n",
     "    \"\"\"\n",
-    "\n",
     "    clean = re.compile('<.*?>')\n",
     "    return re.sub(' +', ' ', re.sub(clean, '', text.replace('\\n', ''))).lower()"
    ]
@@ -45,16 +76,12 @@
     }
    ],
    "source": [
-    "from nltk import sent_tokenize\n",
-    "from IPython.display import clear_output\n",
-    "\n",
-    "path = 'E:\\\\Desktop\\\\en\\\\'\n",
+    "#path = 'E:\\\\Desktop\\\\en\\\\'\n",
     "text = ''\n",
     "corpus = []\n",
-    "\n",
     "sentences = []\n",
     "full_text = ''\n",
-    "total = len(os.listdir(path))\n",
+    "total = len(os.listdir(path)) # Total files\n",
     "count = 0\n",
     "\n",
     "for file in os.listdir(path):\n",
@@ -62,11 +89,10 @@
     "    text = f.read()\n",
     "    full_text = full_text + text\n",
     "    f.close()\n",
-    "\n",
-    "    sentences = [sent.strip() for sent in sent_tokenize(remove_unnecessary_text(text))]\n",
+    "    \n",
+    "    sentences = [sent.strip() for sent in sent_tokenize(clean_text(text))]\n",
     "        \n",
     "    corpus = corpus + sentences\n",
-    "\n",
     "    count += 1\n",
     "    \n",
     "    clear_output(wait = True)\n",
@@ -98,8 +124,6 @@
     }
    ],
    "source": [
-    "from collections import Counter\n",
-    "\n",
     "regex = re.compile('[%s]' % re.escape(string.punctuation))\n",
     "\n",
     "full_text = regex.sub('', remove_unnecessary_text(full_text))\n",
@@ -142,30 +166,54 @@
     }
    ],
    "source": [
-    "import gc\n",
-    "\n",
     "gc.collect()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Starting point:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save objects\n",
+    "WordCounts = None\n",
+    "vocabulary = None\n",
     "\n",
-    "import pickle\n",
-    "\"\"\"\n",
-    "with open('corpus', 'wb') as f:\n",
-    "    pickle.dump(corpus, f)\n",
+    "# Load objects\n",
+    "\n",
+    "with open('vocabulary', 'rb') as f:\n",
+    "    vocabulary = pickle.load(f)\n",
     "    \n",
-    "with open('vocabulary', 'wb') as f:\n",
-    "    pickle.dump(vocabulary, f) \n",
-    "    \n",
-    "with open('WordCounts', 'wb') as f:\n",
-    "    pickle.dump(WordCounts, f) \n",
-    "\"\"\""
+    "with open('WordCounts', 'rb') as f:\n",
+    "    WordCounts = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valid voc 43847\n",
+      "invalid voc 352656\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ignore low frequency words\n",
+    "valid_vocabulary = [k for k,v in WordCounts.items() if v > 10]\n",
+    "invalid_vocabulary = [k for k,v in WordCounts.items() if v <= 10]\n",
+    "print(\"valid voc\", len(valid_vocabulary))\n",
+    "print(\"invalid voc\", len(invalid_vocabulary))"
    ]
   },
   {
@@ -174,54 +222,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load objects\n",
-    "\"\"\"\n",
-    "with open('corpus', 'rb') as f:\n",
-    "    corpus = pickle.load(f)\n",
-    "\n",
-    "with open('vocabulary', 'rb') as f:\n",
-    "    vocabulary = pickle.load(f)\n",
-    "    \n",
-    "with open('WordCounts', 'rb') as f:\n",
-    "    WordCounts = pickle.load(f)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ignore low frequency words\n",
-    "valid_vocabulary = [k for k,v in WordCounts.items() if v > 10]\n",
-    "invalid_vocabulary = [k for k,v in WordCounts.items() if v <= 10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sentences processed 342 out of 342\n"
-     ]
-    }
-   ],
-   "source": [
     "# Replace OOV words in sentences\n",
-    "\n",
     "total = len(sentences)\n",
-    "\n",
     "for i in range(0,len(sentences)):\n",
-    "    \n",
     "    for word in invalid_vocabulary:\n",
     "        sentences[i].replace(word, 'UNK')\n",
-    "      \n",
-    "    \n",
     "    clear_output(wait = True)\n",
     "    print('Sentences processed ' + str(i+1) + ' out of ' + str(total) )"
    ]
@@ -243,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
