--- a/TA_1st_Project.ipynb
+++ b/TA_1st_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,8 @@
    "source": [
     "import re\n",
     "import os\n",
-    "from nltk import sent_tokenize, word_tokenize\n",
+    "import string\n",
+    "from nltk import sent_tokenize, word_tokenize, download\n",
     "from IPython.display import clear_output\n",
     "from collections import Counter\n",
     "import gc\n",
@@ -26,6 +27,15 @@
     "with open('corpus', 'wb') as f:\n",
     "    pickle.dump(corpus, f)\n",
     "    \n",
+    "with open('full_text', 'wb') as f:\n",
+    "    pickle.dump(full_text, f)\n",
+    "\n",
+    "with open('full_text_clean', 'wb') as f:\n",
+    "    pickle.dump(full_text_clean, f)\n",
+    "\n",
+    "with open('AllWords', 'wb') as f:\n",
+    "    pickle.dump(AllWords, f) \n",
+    "\n",
     "with open('vocabulary', 'wb') as f:\n",
     "    pickle.dump(vocabulary, f) \n",
     "    \n",
@@ -35,6 +45,15 @@
     "# Load objects\n",
     "with open('corpus', 'rb') as f:\n",
     "    corpus = pickle.load(f)\n",
+    "\n",
+    "with open('full_text', 'rb') as f:\n",
+    "    full_text = pickle.load(f)\n",
+    "    \n",
+    "with open('full_text_clean', 'rb') as f:\n",
+    "    full_text_clean = pickle.load(f)\n",
+    "\n",
+    "with open('AllWords', 'rb') as f:\n",
+    "    AllWords = pickle.load(f)\n",
     "\n",
     "with open('vocabulary', 'rb') as f:\n",
     "    vocabulary = pickle.load(f)\n",
@@ -47,7 +66,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/datum/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "download('punkt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,19 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File ep-99-12-17.txt finished. Completed 100.0%\n"
+      "File ep-99-04-14.txt finished. Completed 100.0%\n"
      ]
     }
    ],
    "source": [
-    "#path = 'E:\\\\Desktop\\\\en\\\\'\n",
+    "abs_path = os.getcwd()\n",
+    "path = abs_path + '/en/'\n",
     "text = ''\n",
     "corpus = []\n",
     "sentences = []\n",
@@ -108,66 +156,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('corpus', 'wb') as f:\n",
+    "    pickle.dump(corpus, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('full_text', 'wb') as f:\n",
+    "    pickle.dump(full_text, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regex = re.compile('[%s]' % re.escape(string.punctuation))\n",
+    "full_text_clean = regex.sub('', clean_text(full_text))\n",
+    "\n",
+    "print('-------------------------')\n",
+    "print('Full Text Cleaned.')\n",
+    "print('-------------------------')\n",
+    "\n",
+    "with open('full_text_clean', 'wb') as f:\n",
+    "    pickle.dump(full_text_clean, f)\n",
+    "\n",
+    "del full_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "923"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full Text Cleaned.\n",
-      "-------------------------\n",
       "-------------------------\n",
       "Words Tokenized.\n",
       "-------------------------\n",
-      "-------------------------\n",
       "Vocabulary Created.\n",
       "-------------------------\n",
-      "-------------------------\n",
       "WordCounts Calculated.\n",
-      "-------------------------\n",
       "-------------------------\n"
      ]
     }
    ],
    "source": [
-    "regex = re.compile('[%s]' % re.escape(string.punctuation))\n",
-    "\n",
-    "full_text = regex.sub('', Clean_Text(full_text))\n",
-    "print('Full Text Cleaned.')\n",
+    "AllWords = word_tokenize(full_text_clean)\n",
     "print('-------------------------')\n",
-    "print('-------------------------')\n",
-    "\n",
-    "AllWords = word_tokenize(full_text)\n",
     "print('Words Tokenized.')\n",
-    "print('-------------------------')\n",
     "print('-------------------------')\n",
     "\n",
     "vocabulary = set(AllWords)\n",
     "print('Vocabulary Created.')\n",
     "print('-------------------------')\n",
-    "print('-------------------------')\n",
     "\n",
     "WordCounts = Counter(AllWords)\n",
     "print('WordCounts Calculated.')\n",
     "print('-------------------------')\n",
-    "print('-------------------------')\n",
     "\n",
-    "del full_text,AllWords"
+    "with open('AllWords', 'wb') as f:\n",
+    "    pickle.dump(AllWords, f) \n",
+    "\n",
+    "with open('vocabulary', 'wb') as f:\n",
+    "    pickle.dump(vocabulary, f) \n",
+    "    \n",
+    "with open('WordCounts', 'wb') as f:\n",
+    "    pickle.dump(WordCounts, f) \n",
+    "\n",
+    "del full_text_clean, AllWords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "93"
+       "977"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,19 +282,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Starting point:"
+    "#### Early starting point: Instead of all the above.."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
+    "corpus = None\n",
     "WordCounts = None\n",
     "vocabulary = None\n",
     "\n",
     "# Load objects\n",
+    "\n",
+    "with open('corpus', 'rb') as f:\n",
+    "    corpus = pickle.load(f)\n",
     "\n",
     "with open('vocabulary', 'rb') as f:\n",
     "    vocabulary = pickle.load(f)\n",
@@ -203,15 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valid voc 43847\n",
-      "invalid voc 352656\n"
+      "valid voc 41064\n",
+      "invalid voc 339343\n"
      ]
     }
    ],
@@ -220,14 +326,39 @@
     "valid_vocabulary = [k for k,v in WordCounts.items() if v > 10]\n",
     "invalid_vocabulary = [k for k,v in WordCounts.items() if v <= 10]\n",
     "print(\"valid voc\", len(valid_vocabulary))\n",
-    "print(\"invalid voc\", len(invalid_vocabulary))"
+    "print(\"invalid voc\", len(invalid_vocabulary))\n",
+    "\n",
+    "with open('valid_vocabulary', 'wb') as f:\n",
+    "    pickle.dump(valid_vocabulary, f) \n",
+    "    \n",
+    "with open('invalid_vocabulary', 'wb') as f:\n",
+    "    pickle.dump(invalid_vocabulary, f) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentences processed 1479 out of 1582910\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-9ae57477c17a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtotal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minvalid_vocabulary\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mcorpus\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'UNK'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Replace OOV words in sentences\n",
     "total = len(corpus)\n",
@@ -237,6 +368,34 @@
     "    clear_output(wait = True)\n",
     "    print('Sentences processed ' + str(i+1) + ' out of ' + str(total) )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('corpus_no_OOV', 'wb') as f:\n",
+    "    pickle.dump(corpus, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_no_OOV = None\n",
+    "with open('corpus_no_OOV', 'rb') as f:\n",
+    "    corpus_no_OOV = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
