--- a/TA_1st_Project.ipynb
+++ b/TA_1st_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -24,42 +24,12 @@
     "import pickle\n",
     "\"\"\"\n",
     "# Save objects\n",
-    "with open('corpus', 'wb') as f:\n",
-    "    pickle.dump(corpus, f)\n",
-    "    \n",
-    "with open('full_text', 'wb') as f:\n",
-    "    pickle.dump(full_text, f)\n",
-    "\n",
-    "with open('full_text_clean', 'wb') as f:\n",
-    "    pickle.dump(full_text_clean, f)\n",
-    "\n",
-    "with open('AllWords', 'wb') as f:\n",
-    "    pickle.dump(AllWords, f) \n",
-    "\n",
-    "with open('vocabulary', 'wb') as f:\n",
-    "    pickle.dump(vocabulary, f) \n",
-    "    \n",
-    "with open('WordCounts', 'wb') as f:\n",
-    "    pickle.dump(WordCounts, f) \n",
+    "with open('object_name', 'wb') as f:\n",
+    "    pickle.dump(object_variable, f)\n",
     "\n",
     "# Load objects\n",
-    "with open('corpus', 'rb') as f:\n",
-    "    corpus = pickle.load(f)\n",
-    "\n",
-    "with open('full_text', 'rb') as f:\n",
-    "    full_text = pickle.load(f)\n",
-    "    \n",
-    "with open('full_text_clean', 'rb') as f:\n",
-    "    full_text_clean = pickle.load(f)\n",
-    "\n",
-    "with open('AllWords', 'rb') as f:\n",
-    "    AllWords = pickle.load(f)\n",
-    "\n",
-    "with open('vocabulary', 'rb') as f:\n",
-    "    vocabulary = pickle.load(f)\n",
-    "    \n",
-    "with open('WordCounts', 'rb') as f:\n",
-    "    WordCounts = pickle.load(f)\n",
+    "with open('object_name', 'rb') as f:\n",
+    "    object_variable = pickle.load(f)\n",
     "\"\"\"\n",
     "print(\"Imports Completed\")"
    ]
@@ -94,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +77,8 @@
     "    \"\"\"\n",
     "    clean = re.compile('<.*?>')\n",
     "    \n",
-    "    out = text.replace('\\n', '') # Remove line breaks\n",
-    "    out = re.sub(clean, '', out) # Remove tagged text e.g. <Chapter 1>\n",
+    "    out = text.replace('\\n', ' ') # Remove line breaks\n",
+    "    out = re.sub(clean, ' ', out) # Remove tagged text e.g. <Chapter 1>\n",
     "    out = re.sub(' +', ' ', out) # Reduce whitespace down to one\n",
     "    \n",
     "    out = out.lower() # Turn everything to lower case\n",
@@ -118,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -133,21 +103,22 @@
     "abs_path = os.getcwd()\n",
     "path = abs_path + '/en/'\n",
     "text = ''\n",
-    "corpus = []\n",
+    "corpus_clean = []\n",
     "sentences = []\n",
-    "full_text = ''\n",
+    "corpus_original = ''\n",
     "total = len(os.listdir(path)) # Total files\n",
     "count = 0\n",
     "\n",
     "for file in os.listdir(path):\n",
     "    f = open(path + file, 'r', encoding=\"utf-8\")\n",
-    "    text = f.read()\n",
-    "    full_text = full_text + text\n",
+    "    file_text = f.read()\n",
+    "    corpus_original = corpus_original + file_text\n",
     "    f.close()\n",
-    "    \n",
-    "    sentences = [sent.strip() for sent in sent_tokenize(clean_text(text))]\n",
-    "        \n",
-    "    corpus = corpus + sentences\n",
+    "\n",
+    "    regex = re.compile('[%s]' % re.escape(string.punctuation))\n",
+    "    file_sentences = [regex.sub('', sent).strip() for sent in sent_tokenize(clean_text(file_text))]\n",
+    "\n",
+    "    corpus_clean = corpus_clean + file_sentences\n",
     "    count += 1\n",
     "    \n",
     "    clear_output(wait = True)\n",
@@ -156,55 +127,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('corpus', 'wb') as f:\n",
-    "    pickle.dump(corpus, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('full_text', 'wb') as f:\n",
-    "    pickle.dump(full_text, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "regex = re.compile('[%s]' % re.escape(string.punctuation))\n",
-    "full_text_clean = regex.sub('', clean_text(full_text))\n",
-    "\n",
-    "print('-------------------------')\n",
-    "print('Full Text Cleaned.')\n",
-    "print('-------------------------')\n",
-    "\n",
-    "with open('full_text_clean', 'wb') as f:\n",
-    "    pickle.dump(full_text_clean, f)\n",
-    "\n",
-    "del full_text"
+    "\"\"\"\n",
+    "demo corpus file:\n",
+    "------------------------------------------------------------------\n",
+    "original text: <class 'str'>\n",
+    "<CHAPTER ID=\"005\">\n",
+    "Voting time\n",
+    "<SPEAKER ID=\"104\" NAME=\"President\">\n",
+    "The next item is the vote.\n",
+    "<P>\n",
+    "(For the results and other details on the vote: see Minutes)\n",
+    "------------------------------------------------------------------\n",
+    "Its clean_text(text): <class 'str'>\n",
+    " voting time the next item is the vote. (for the results and other details on the vote: see minutes) \n",
+    "------------------------------------------------------------------\n",
+    "Its sent_tokenize(clean_text(text)): <class 'list'>\n",
+    "[' voting time the next item is the vote.', '(for the results and other details on the vote: see minutes)']\n",
+    "------------------------------------------------------------------\n",
+    "Its sentences = [sent.strip() for sent in sent_tokenize(clean_text(text))]: <class 'list'>\n",
+    "['voting time the next item is the vote.', '(for the results and other details on the vote: see minutes)']\n",
+    "------------------------------------------------------------------\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the basic objects:\n",
+    "with open('corpus_original', 'wb') as f:\n",
+    "    pickle.dump(corpus_original, f)\n",
+    "with open('corpus_clean', 'wb') as f:\n",
+    "    pickle.dump(corpus_clean, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------\n",
+      "corpus_clean_string created.\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "regex = re.compile('[%s]' % re.escape(string.punctuation))\n",
+    "corpus_clean_string = regex.sub('', clean_text(corpus_original))\n",
+    "\n",
+    "print('-------------------------')\n",
+    "print('corpus_clean_string created.')\n",
+    "print('-------------------------')\n",
+    "\n",
+    "with open('corpus_clean_string', 'wb') as f:\n",
+    "    pickle.dump(corpus_clean_string, f)\n",
+    "\n",
+    "del corpus_original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "923"
+       "317"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +236,7 @@
     }
    ],
    "source": [
-    "AllWords = word_tokenize(full_text_clean)\n",
+    "AllWords = word_tokenize(corpus_clean_string)\n",
     "print('-------------------------')\n",
     "print('Words Tokenized.')\n",
     "print('-------------------------')\n",
@@ -255,21 +258,21 @@
     "with open('WordCounts', 'wb') as f:\n",
     "    pickle.dump(WordCounts, f) \n",
     "\n",
-    "del full_text_clean, AllWords"
+    "del corpus_clean_string, AllWords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "977"
+       "0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,18 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus = None\n",
+    "corpus_clean = None\n",
     "WordCounts = None\n",
     "vocabulary = None\n",
     "\n",
     "# Load objects\n",
     "\n",
-    "with open('corpus', 'rb') as f:\n",
-    "    corpus = pickle.load(f)\n",
+    "with open('corpus_clean', 'rb') as f:\n",
+    "    corpus_clean = pickle.load(f)\n",
     "\n",
     "with open('vocabulary', 'rb') as f:\n",
     "    vocabulary = pickle.load(f)\n",
@@ -309,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valid voc 41064\n",
-      "invalid voc 339343\n"
+      "valid voc 32678\n",
+      "invalid voc 109653\n"
      ]
     }
    ],
@@ -337,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentences processed 1479 out of 1582910\n"
+      "Sentences processed 393 out of 2217535\n"
      ]
     },
     {
@@ -354,17 +357,17 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-64-9ae57477c17a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtotal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minvalid_vocabulary\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mcorpus\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'UNK'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-60-1b3acc4bd0ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus_clean\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvalid_vocabulary\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mcorpus_clean\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'UNK'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Sentences processed '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' out of '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "# Replace OOV words in sentences\n",
-    "total = len(corpus)\n",
-    "for i in range(0,len(corpus)):\n",
-    "    for word in invalid_vocabulary:\n",
-    "        corpus[i].replace(word, 'UNK')\n",
+    "total = len(corpus_clean)\n",
+    "for i in range(0,len(corpus_clean)):\n",
+    "    for word in valid_vocabulary:\n",
+    "        corpus_clean[i].replace(word, 'UNK')\n",
     "    clear_output(wait = True)\n",
     "    print('Sentences processed ' + str(i+1) + ' out of ' + str(total) )"
    ]
@@ -375,18 +378,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('corpus_no_OOV', 'wb') as f:\n",
-    "    pickle.dump(corpus, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus_no_OOV = None\n",
-    "with open('corpus_no_OOV', 'rb') as f:\n",
+    "corpus_clean_no_OOV = None\n",
+    "with open('corpus_clean_no_OOV', 'rb') as f:\n",
     "    corpus_no_OOV = pickle.load(f)"
    ]
   },
