made low freq words replacement faster

--- a/TA_1st_Project.ipynb
+++ b/TA_1st_Project.ipynb
@@ -22,6 +22,7 @@
     "from collections import Counter\n",
     "import gc\n",
     "import pickle\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
     "\"\"\"\n",
     "# Save objects\n",
     "with open('object_name', 'wb') as f:\n",
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -340,36 +341,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentences processed 393 out of 2217535\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-60-1b3acc4bd0ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus_clean\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvalid_vocabulary\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mcorpus_clean\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'UNK'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Sentences processed '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' out of '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Sentences processed 1001 out of 2217535\n"
      ]
     }
    ],
    "source": [
     "# Replace OOV words in sentences\n",
+    "\n",
+    "def split_sentence(sentence):\n",
+    "    PATTERN = '\\w+|\\(|\\)|\\.|\\,'\n",
+    "    tokenizer = RegexpTokenizer(pattern=PATTERN) \n",
+    "    return tokenizer.tokenize(sentence)\n",
+    "# dummy_count = 0\n",
     "total = len(corpus_clean)\n",
     "for i in range(0,len(corpus_clean)):\n",
-    "    for word in valid_vocabulary:\n",
-    "        corpus_clean[i].replace(word, 'UNK')\n",
+    "    sentence = ''.join(corpus_clean[i]) # make it string\n",
+    "    splitted_sent = split_sentence(sentence)    \n",
+    "    new_sent = []\n",
+    "    for word in splitted_sent:\n",
+    "        new_word = 'UNK' if word not in valid_vocabulary else word\n",
+    "        new_sent.append(new_word)\n",
+    "        corpus_clean[i] = new_sent\n",
     "    clear_output(wait = True)\n",
-    "    print('Sentences processed ' + str(i+1) + ' out of ' + str(total) )"
+    "    print('Sentences processed ' + str(i+1) + ' out of ' + str(total))\n",
+    "    #dummy_count = dummy_count + 1\n",
+    "    #if 1000 < dummy_count:\n",
+    "    #    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('corpus_clean_no_OOV', 'wb') as f:\n",
+    "    pickle.dump(corpus_clean, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace OOV words in sentences\n",
+    "# total = len(corpus_clean)\n",
+    "# for i in range(0,len(corpus_clean)):\n",
+    "#    for word in valid_vocabulary:\n",
+    "#        corpus_clean[i].replace(word, 'UNK')\n",
+    "#   clear_output(wait = True)\n",
+    "#   print('Sentences processed ' + str(i+1) + ' out of ' + str(total) )"
    ]
   },
   {
